--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mykhailo Basiuk personal website.</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <title>Mykhailo Basiuk.</title>
 </head>
+
 <body>
-    <H1>Hello from Mykhailo Basiuk.</H1>
+    <H1 class="h1">Hello from Mykhailo Basiuk.</H1>
 </body>
+
 </html>
