--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="Hire Mykhailo Basiuk, Hire IT Consultant">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.png">
     <title>Mykhailo Basiuk.</title>
 </head>
 
