add some details

--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
 </head>
 
 <body>
-    <H1 class="h1">Hello from Mykhailo Basiuk.</H1>
+    <div class="container">
+        <div class="person">
+            <span class="name">Mike Basiuk</span>
+            <span class="title">UI\UX Consultant</span>
+        </div>
+
+        <div class="contact">
+            Please contact <a href="mailto:mykhailo.basiuk@gmail.com">mykhailo.basiuk@gmail.com</a> for the following service for your web-site:
+        </div>
+
+
+        <div class="service">Define correct document type declaration.</div>
+        <div class="service-details">That help your website to work in correct mode, and render all the elements as
+            expected by the different browsers. Wrong declaration may cause
+            non-expected scolls, elements wrapping, element overlapping or non-visible part of your site even in modern
+            browsers.
+        </div>
+    </div>
 </body>
 
 </html>
