--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<!-- Copyright 2019 Mykhailo Basiuk -->
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
