--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.png">
-    <title>Mykhailo Basiuk - Hire</title>
+    <link rel="icon" type="image/png" sizes="64x64" href="favicon.png">
+    <meta property='og:site_name' content='Mykhailo Basiuk'>
+    <meta property='og:title' content='Mykhailo Basiuk'>
+    <meta property='og:description' content='Mykhailo Basiuk is the world&#39;s leading IT consultant. See cooperation details.'>
+    <meta property='og:type' content='website'>
+    <meta property='twitter:site' content='@BasiukMykhailo'>
+    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml">
+    <title>Mykhailo Basiuk</title>
 </head>
 
 <body>
