Revert "update search"
This reverts commit 9893730a169185b2be6e1dd4759374bb00f154ad.

revert commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property='og:description' content='Mykhailo Basiuk is the world&#39;s leading IT consultant. See cooperation details.'>
     <meta property='og:type' content='website'>
     <meta property='twitter:site' content='@BasiukMykhailo'>
-    <link rel="search" type="application/opensearchdescription+xml" title="MBasiuk" href="/opensearch1.xml">
+    <link rel="search" type="application/opensearchdescription+xml" title="MBasiuk" href="/opensearch.xml">
     <title>Mykhailo Basiuk</title>
 </head>
 
