--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:og="http://opengraphprotocol.org/schema/">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>MYKHAILO BASIUK</title>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -15,13 +16,22 @@
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
-    <meta property='og:site_name' content='Mykhailo Basiuk'>
-    <meta property='og:title' content='Mykhailo Basiuk'>
-    <meta property='og:description' content='Mykhailo Basiuk is the world&#39;s leading IT consultant. See cooperation details.'>
+    <link rel="canonical" href="https://mbasiuk.github.io">
+    <meta property='og:site_name' content='MYKHAILO BASIUK'>
+    <meta property='og:title' content='MYKHAILO BASIUK'>
+    <meta property='og:url' content="https://mbasiuk.github.io">
     <meta property='og:type' content='website'>
+    <meta property='og:description' content="the world&#39;s leading IT expert.">
+    <meta itemprop="name" content="MYKHAILO BASIUK">
+    <meta itemprop="url" content="https://mbasiuk.github.io">
+    <meta itemprop="description" content="the world&#39;s leading IT expert.">
     <meta property='twitter:site' content='@BasiukMykhailo'>
+    <meta name="twitter:title" content="MYKHAILO BASIUK">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="https://mbasiuk.github.io">
+    <meta name="twitter:description" content="the world&#39;s leading IT expert.">
+    <meta name="description" content="the world&#39;s leading IT expert.">
     <link rel="search" type="application/opensearchdescription+xml" title="Mykhailo Basiuk Search" href="/opensearch.xml">
-    <title>Mykhailo Basiuk</title>
 </head>
 
 <body>
