--- a/index.html
+++ b/index.html
@@ -100,20 +100,20 @@
         }
 
         .logo {
-            background: url('favicon-96x96.png') no-repeat;
+            background: url('me.png') no-repeat;
             position: absolute;
             width: 96px;
             height: 96px;
             border-radius: 50%;
             bottom: 100px;
             right: 36px;
-            opacity: 0.3;
+            opacity: 0.9;
             transition: 300ms;
         }
 
         .logo:hover {
             opacity: 1;
-            transform: rotate(442deg);
+            transform: rotate(-25deg);
         }
 
         ::selection {
