--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <meta property='og:url' content="https://mbasiuk.github.io">
     <meta property='og:type' content='website'>
     <meta property='og:description' content="the world&#39;s leading IT expert.">
+    <meta property="og:image" content="https://mbasiuk.github.io/me.png" >
+    <meta property="og:image:width" content="96">
+    <meta property="og:image:height" content="96">
+    <meta property="og:image:alt" content="MYKHAILO BASIUK avatar" >
     <meta itemprop="name" content="MYKHAILO BASIUK">
     <meta itemprop="url" content="https://mbasiuk.github.io">
     <meta itemprop="description" content="the world&#39;s leading IT expert.">
@@ -99,7 +103,7 @@
             width: 1.5em;
         }
 
-        .logo {
+        .avatar {
             background: url('me.png') no-repeat;
             position: absolute;
             width: 96px;
@@ -111,7 +115,7 @@
             transition: 300ms;
         }
 
-        .logo:hover {
+        .avatar:hover {
             opacity: 1;
             transform: rotate(-25deg);
         }
@@ -152,7 +156,7 @@
                 </div>
             </div>
 
-            <div class="logo"></div>
+            <div class="avatar"></div>
 
         </div>
     </div>
