--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             }
         }
 
+
         .card:hover {
             box-shadow: 0 4px 12px rgba(35, 38, 40, 0.2);
         }
@@ -173,6 +174,12 @@
         ::-moz-selection {
             background: #f75b2a;
             color: white;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            .card {
+                background: #313131;
+            }
         }
     </style>
 </head>
