--- a/index.html
+++ b/index.html
@@ -177,8 +177,16 @@
         }
 
         @media (prefers-color-scheme: dark) {
+            body {
+                background: black;
+            }
+
             .card {
                 background: #313131;
+            }
+
+            .detail {
+                color: #75431c;
             }
         }
     </style>
