--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
         }
 
         @media (prefers-color-scheme: dark) {
-            body {
+            html,
+            body,
+            .container {
                 background: black;
             }
 
