--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
 
         @media (prefers-color-scheme: dark) {
             html,
-            body,
-            .container {
+            body {
                 background: black;
             }
 
