--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
             margin: 0;
         }
 
+
+        .plane {
+            position: absolute;
+            top: 0;
+            left: 0;
+            overflow: visible;
+            z-index: 0;
+            height: 100vh;
+            width: 100vw;
+        }
+
         .card {
             box-shadow: 0 4px 8px rgba(60, 65, 70, 0.2);
             background: white;
@@ -177,6 +188,7 @@
         }
 
         @media (prefers-color-scheme: dark) {
+
             html,
             body {
                 background: black;
