animation to provide visual feedback

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 </div>
                 <div>
                     <span class="detail">e:</span>
-                    <a class="dval" href="mailto:mykhailo.basiuk+partnershipe@gmail.com">mykhailo.basiuk+partnership@gmail.com</a>
+                    <a class="dval" href="mailto:mykhailo.basiuk+partner@gmail.com">mykhailo.basiuk+partner@gmail.com</a>
                 </div>
                 <div>
                     <span class="detail">a:</span>
