--- a/loancalc.html
+++ b/loancalc.html
@@ -54,6 +54,10 @@
             line-height: 2em;
         }
         
+        .readonly:focus {
+            outline-color: #989898;
+        }
+        
         .card {
             box-shadow: 0 4px 8px rgba(60, 65, 70, 0.2);
             background: white;
@@ -104,7 +108,6 @@
             .label {
                 width: 15em;
             }
-
             input,
             .btn {
                 font-size: 1em;
@@ -193,22 +196,22 @@
                 <span class="label">Mortgage amount:</span><input type="text" id="principal" autofocus="autofocus" value="$220,000">
             </div>
             <div>
-                <span class="label">Years:</span><input type="text" id="yearth" value="30">
+                <span class="label">Years:</span><input type="text" id="year" value="30">
             </div>
             <div>
                 <span class="label">Interest rate:</span><input type="text" id="interest" value="3.92%">
             </div>
             <div class="action">
-                <button id="calculate" class="btn" onclick="refresh()">Calculate</button>
+                <button id="calculate" class="btn" onclick="refresh(true);">Calculate</button>
             </div>
             <div>
                 <span class="label mini">Calculated:</span>
             </div>
             <div>
-                <span class="label">Total amount:</span><input type="text" id="total" readonly="readonly">
+                <span class="label">Total amount:</span><input type="text" id="total" class="readonly" readonly="readonly">
             </div>
             <div>
-                <span class="label">Montly payment:</span><input type="text" id="monthly" readonly="readonly">
+                <span class="label">Montly payment:</span><input type="text" id="monthly" class="readonly" readonly="readonly">
             </div>
             <div class="label med">Fixed-rate loans calc for the United States. Read more about rules and formula on <a href="https://en.wikipedia.org/wiki/Fixed-rate_mortgage">wikipedia</a>.
             </div>
@@ -217,7 +220,7 @@
 
     <script>
         var iPrincipal = document.getElementById("principal");
-        var iYearth = document.getElementById("yearth");
+        var iYear = document.getElementById("year");
         var iInterest = document.getElementById("interest");
         var iTotal = document.getElementById("total");
         var iMonthly = document.getElementById("monthly");
@@ -232,13 +235,84 @@
             }
         }
 
-        function refresh() {
+        function fromUrl() {
+            var url = document.location.search;
+            var pRegex = /[\?&]p=(\d+)/;
+            if (pRegex.test(url)) {
+                var principal = parseFloat(url.match(pRegex)[1], 10);
+                iPrincipal.value = '$' + format(principal);
+            }
+            var iRegexp = /[\?&]i=([\d\.]+)/;
+            if (iRegexp.test(url)) {
+                var interest = parseFloat(url.match(iRegexp)[1], 10);
+                iInterest.value = interest + '%';
+            }
+            var yRegexp = /[\?&]y=([\d\.]+)/
+            if (yRegexp.test(url)) {
+                var year = parseInt(url.match(yRegexp)[1], 10);
+                iYear.value = year;
+            }
+        }
+
+        fromUrl();
+
+        var smoothUrls = false;
+        var navSearch = function (search) {
+            document.location.search = search;
+        }
+        if (typeof (history) === "object") {
+            navSearch = function (search) {
+                history.replaceState(null, null, document.location.pathname + search);
+            }
+            smoothUrls = true;
+        }
+
+        function getParamRegex(param) {
+            return new RegExp('([\?&]' + param + '=)([^&]*)(&?.*)');
+        }
+
+        function setParam(val, paramName, url) {
+            if (!isNaN(val)) {
+                var parRegex = getParamRegex(paramName);
+                if (parRegex.test(url)) {
+                    url = url.replace(parRegex, '$1' + val + '$3');
+                } else {
+                    url = url + '&' + paramName + '=' + val;
+                }
+            }
+            return url;
+        }
+
+        var toUrl = function (principal, interest, year) {
+            var url = document.location.search;
+            url = setParam(interest, 'i', url);
+            url = setParam(principal, 'p', url);
+            url = setParam(year, 'y', url);
+            navSearch(url);
+        }
+
+        if (typeof (URL) === "function") {
+            toUrl = function (principal, interest, year) {
+                var url = new URL(document.location.href);
+                url.searchParams.set('i', interest);
+                url.searchParams.set('p', principal);
+                url.searchParams.set('y', year);
+                navSearch(url.search);
+            }
+        }
+
+        function refresh(hard) {
 
             var principal = parseFloat(iPrincipal.value.replace(/[\$\,]/gi, ''), 10);
-            var yearh = parseInt(iYearth.value);
+            var year = parseInt(iYear.value);
             var interest = parseFloat(iInterest.value.replace(/%/, '').replace(',', '.'));
+
+            if (hard === true || smoothUrls) {
+                toUrl(principal, interest, year);
+            }
+
             var r = interest / 12 / 100;
-            var N = yearh * 12;
+            var N = year * 12;
             if (!r) {
                 var total = principal;
                 var monthly = principal / N;
@@ -249,7 +323,7 @@
 
             iPrincipal.value = '$' + format(principal);
             iInterest.value = interest + '%';
-            iYearth.value = yearh;
+            iYear.value = year;
 
             var steps = 5;
             for (var i = 0; i <= steps; i++) {
@@ -265,9 +339,9 @@
 
         refresh();
 
-        iPrincipal.addEventListener('blur', refresh, false);
-        iYearth.addEventListener('blur', refresh, false);
-        iInterest.addEventListener('blur', refresh, false);
+        iPrincipal.addEventListener('change', refresh, false);
+        iYear.addEventListener('change', refresh, false);
+        iInterest.addEventListener('change', refresh, false);
     </script>
 </body>
 
