--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 </div>
                 <div>
                     <span class="detail">a:</span>
-                    <span class="dval">St. Paul, MN, USA</span>
+                    <span class="dval">Irving, Dallas, TX, USA</span>
                 </div>
             </div>
 
