--- a/index.html
+++ b/index.html
@@ -188,9 +188,12 @@
 
         @media (prefers-color-scheme: dark) {
 
-            html,
-            body {
+            html {
                 background: black;
+            }
+
+            body {
+                background: transperent;
             }
 
             .card {
