in progress cv.html

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" class="plane" viewBox="0, 0, 580 300">
         <defs>
             <path stroke="#000" id="motion_path" d="m1,183c22,301 542,158 542,-7c0,-166 -564,-293 -542,7z"
-                fill="transparent" stroke="0" />
+                fill="transparent" stroke-width="0" />
         </defs>
         <g id='plane' transform="rotate(-90 25,25) scale(.5 .5)">
             <path
