--- a/cv.html
+++ b/cv.html
@@ -11,6 +11,7 @@
       html,
       blockquote {
          margin: 0;
+         letter-spacing: 1px;
       }
 
       html,
@@ -33,10 +34,13 @@
          background-color: white;
       }
 
+      h1 {
+         letter-spacing: 2px;
+      }
+
       @page {
          size: letter;
       }
-
 
       .accent {
          color: rgb(68, 147, 153);
@@ -106,6 +110,10 @@
          align-items: center;
       }
 
+      .flex-center {
+         align-items: center;
+      }
+
       .contact .icon {
          font-size: 30px;
          margin: 6px 16px;
@@ -119,6 +127,10 @@
          margin-bottom: 2rem;
       }
 
+      .mb-1 {
+         margin-bottom: 1rem;
+      }
+
       .mr-1 {
          margin-right: 1rem;
       }
@@ -127,8 +139,23 @@
          margin-right: 2rem;
       }
 
+      .ml-1 {
+         margin-left: 1rem;
+      }
+
       .ml-2 {
          margin-left: 2rem;
+      }
+
+      .ls-2 {
+         letter-spacing: 2px;
+      }
+
+      .mat-icon {
+         border: 2px solid rgb(49, 60, 78);
+         border-radius: 21px;
+         line-height: 1em;
+         padding: 6px;
       }
    </style>
 </head>
@@ -147,24 +174,80 @@
                were reported."</blockquote>
          </div>
       </div>
-      <div class="flex flex-col bg-accent contact size-2 mr-1">
-         <div class="flex">
-            <span class="icon">&#9993;</span>mykhailo.basiuk+cv@gmail.com
+      <div class="flex flex-col">
+         <div class="flex flex-col bg-accent contact mr-1 ls-2">
+            <div class="flex">
+               <svg fill="#449399" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30">
+                  <path
+                     d="M140-160q-24 0-42-18t-18-42v-520q0-24 18-42t42-18h680q24 0 42 18t18 42v520q0 24-18 42t-42 18H140Zm340-302L140-685v465h680v-465L480-462Zm0-60 336-218H145l335 218ZM140-685v-55 520-465Z" />
+               </svg>
+               <span class="ml-1">mykhailo.basiuk+cv@gmail.com</span>
+            </div>
+            <div class="flex">
+               <svg fill="#449399" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30">
+                  <path
+                     d="M795-120q-122 0-242.5-60T336-336q-96-96-156-216.5T120-795q0-19.286 12.857-32.143T165-840h140q13.611 0 24.306 9.5Q340-821 343-805l27 126q2 14-.5 25.5T359-634L259-533q56 93 125.5 162T542-254l95-98q10-11 23-15.5t26-1.5l119 26q15.312 3.375 25.156 15.188Q840-316 840-300v135q0 19.286-12.857 32.143T795-120ZM229-588l81-82-23-110H180q0 39 12 85.5T229-588Zm369 363q41 19 89 31t93 14v-107l-103-21-79 83ZM229-588Zm369 363Z" />
+               </svg>
+               <span class="ml-1">+1 (651) 417-6127</span>
+            </div>
          </div>
-         <div class="flex">
-            <span class="icon">&#x260E;</span>+1 (651) 417-6127
-         </div>
+         <div>&nbsp;</div>
       </div>
    </div>
 
    <div class="mb-2"></div>
 
-   <div class="flex ml-2 size-2">
-      <div class="flex">
-         <span class="icon">&#128188;</span> <span>Total Work Experience </span>
+   <div class="flex">
+
+      <div class="flex flex-col ml-2">
+         <div class="flex size-2 mb-2">
+            <div class="flex flex-center">
+               <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30">
+                  <path fill="rgb(49, 60, 78)"
+                     d="M140-120q-24 0-42-18t-18-42v-480q0-24 18-42t42-18h180v-100q0-24 18-42t42-18h200q24 0 42 18t18 42v100h180q24 0 42 18t18 42v480q0 24-18 42t-42 18H140Zm240-600h200v-100H380v100Zm440 349H571v60H391v-60H140v191h680v-191Zm-369 0h60v-60h-60v60Zm-311-60h251v-60h180v60h249v-229H140v229Zm340 30Z" />
+               </svg>
+               <span>Work Experience</span>
+            </div>
+         </div>
+
+         <div class="flex mb-1">
+            <div class="ex-logo mr-1">
+               <img src="gl.jpg" width="30" height="30" />
+            </div>
+
+            <div class="flex flex-col">
+               <div class="ex-title accent">
+                  Senior Software Engineer
+               </div>
+               <div class="ex-company">
+                  GlobalLogic
+               </div>
+               <div class="ex-time">
+                  Dec 2019 - Present (3 years 8 months)
+               </div>
+            </div>
+         </div>
+
+         <div class="flex">
+
+            <div class="ex-logo mr-1">
+               <img src="gl.jpg" width="30" height="30" />
+            </div>
+
+            <div class="flex flex-col">
+               <div class="ex-title accent">
+                  Full Stack Developer
+               </div>
+               <div class="ex-company">
+                  GlobalLogic
+               </div>
+               <div class="ex-time">
+                  Feb 2018 - Dec 2019 (1 year 11 months)
+               </div>
+            </div>
+         </div>
       </div>
 
-      <div>11 yearth</div>
    </div>
 
 </body>
