--- a/cv.html
+++ b/cv.html
@@ -79,15 +79,6 @@
          margin: 0.5em 0;
       }
 
-      .icon {
-         font-family: initial;
-         line-height: 1em;
-      }
-
-      .bg-accent .icon {
-         color: #449399;
-      }
-
       .flex {
          display: flex;
       }
@@ -110,17 +101,13 @@
          align-items: center;
       }
 
-      .flex-center {
-         align-items: center;
+      .contact a {
+         color: #fff;
+         text-decoration: none;
       }
 
-      .contact .icon {
-         font-size: 30px;
-         margin: 6px 16px;
-         border: 2px solid #449399;
-         border-radius: 21px;
-         line-height: 1em;
-         padding: 6px;
+      .flex-center {
+         align-items: center;
       }
 
       .mb-2 {
@@ -150,13 +137,6 @@
       .ls-2 {
          letter-spacing: 2px;
       }
-
-      .mat-icon {
-         border: 2px solid rgb(49, 60, 78);
-         border-radius: 21px;
-         line-height: 1em;
-         padding: 6px;
-      }
    </style>
 </head>
 
@@ -181,14 +161,14 @@
                   <path
                      d="M140-160q-24 0-42-18t-18-42v-520q0-24 18-42t42-18h680q24 0 42 18t18 42v520q0 24-18 42t-42 18H140Zm340-302L140-685v465h680v-465L480-462Zm0-60 336-218H145l335 218ZM140-685v-55 520-465Z" />
                </svg>
-               <span class="ml-1">mykhailo.basiuk+cv@gmail.com</span>
+               <a class="ml-1" href="mailto:mykhailo.basiuk+cv@gmail.com">mykhailo.basiuk+cv@gmail.com</a>
             </div>
             <div class="flex">
                <svg fill="#449399" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30">
                   <path
                      d="M795-120q-122 0-242.5-60T336-336q-96-96-156-216.5T120-795q0-19.286 12.857-32.143T165-840h140q13.611 0 24.306 9.5Q340-821 343-805l27 126q2 14-.5 25.5T359-634L259-533q56 93 125.5 162T542-254l95-98q10-11 23-15.5t26-1.5l119 26q15.312 3.375 25.156 15.188Q840-316 840-300v135q0 19.286-12.857 32.143T795-120ZM229-588l81-82-23-110H180q0 39 12 85.5T229-588Zm369 363q41 19 89 31t93 14v-107l-103-21-79 83ZM229-588Zm369 363Z" />
                </svg>
-               <span class="ml-1">+1 (651) 417-6127</span>
+               <a class="ml-1" href="tel:1-651-417-6127">+1 (651) 417-6127</a>
             </div>
          </div>
          <div>&nbsp;</div>
