--- a/cv.html
+++ b/cv.html
@@ -212,7 +212,7 @@
          <div class="left-border"></div>
          <div class="header">
             <h1>Mykhailo Basiuk</h1>
-            <p class="accent size-2">Senior Software Engineer</p>
+            <p class="accent size-2">Principal Software Engineer</p>
             <blockquote class="size-3 accent-2 mb-2 mr-2">"We released the new version yesterday. Everything was smooth,
                no new
                bugs
@@ -354,7 +354,7 @@
             </div>
          </div>
 
-         <div class="flex mb-1">
+         <div class="flex mb-3">
             <div class="ex-logo mr-1">
                <img class="img-contain" src="sl.png" width="30" height="30" />
             </div>
@@ -372,6 +372,14 @@
             </div>
          </div>
 
+         <div class="flex flex-center size-2 mb-1">
+            <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="M480-81q-140-35-230-162.5T160-523v-238l320-120 320 120v238q0 152-90 279.5T480-81Zm0-399Zm0 86q37 0 63-25.5t26-62.5q0-38-26-64t-63-26q-37 0-63 26t-26 64q0 37 26 62.5t63 25.5Zm0 251q52-17 95.5-49.5T653-269l-90-90q-19 11-40 18t-43 7q-62 0-105.5-43T331-482q0-63 43.5-106.5T480-632q62 0 105.5 43.5T629-482q0 21-6 42t-19 38l83 83q26-45 39.5-97T740-523v-196l-260-98-260 98v196q0 131 72.5 236.5T480-143Z"/></svg>
+            <span>Legal Status</span>
+         </div>
+
+         <div class="flex flex-col ml-3">
+            <span class="size-3 accent">Green Card</span>
+         </div>
       </div>
 
       <div class="flex flex-1 flex-col mr-2">
