update older references

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -16,23 +16,23 @@
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="canonical" href="https://mbasiuk.github.io">
+    <link rel="canonical" href="https://mbasiuk.com">
     <meta property='og:site_name' content='MYKHAILO BASIUK'>
     <meta property='og:title' content='MYKHAILO BASIUK'>
-    <meta property='og:url' content="https://mbasiuk.github.io">
+    <meta property='og:url' content="https://mbasiuk.com">
     <meta property='og:type' content='website'>
     <meta property='og:description' content="the world&#39;s leading IT expert.">
-    <meta property="og:image" content="https://mbasiuk.github.io/me.png">
+    <meta property="og:image" content="https://mbasiuk./me.png">
     <meta property="og:image:width" content="96">
     <meta property="og:image:height" content="96">
     <meta property="og:image:alt" content="MYKHAILO BASIUK avatar">
     <meta itemprop="name" content="MYKHAILO BASIUK">
-    <meta itemprop="url" content="https://mbasiuk.github.io">
+    <meta itemprop="url" content="https://mbasiuk.com">
     <meta itemprop="description" content="the world&#39;s leading IT expert.">
     <meta property='twitter:site' content='@BasiukMykhailo'>
     <meta name="twitter:title" content="MYKHAILO BASIUK">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://mbasiuk.github.io">
+    <meta name="twitter:url" content="https://mbasiuk.com">
     <meta name="twitter:description" content="the world&#39;s leading IT expert.">
     <meta name="description" content="the world&#39;s leading IT expert.">
     <link rel="search" type="application/opensearchdescription+xml" title="Mykhailo Basiuk Search"
