--- a/wwwroot/loancalc.html
+++ b/wwwroot/loancalc.html
@@ -15,17 +15,17 @@
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="canonical" href="https://mbasiuk.github.io/loancalc.html">
+    <link rel="canonical" href="https://mbasiuk.com/loancalc.html">
     <meta property='og:title' content='Mortgage Calc by MYKHAILO BASIUK'>
-    <meta property='og:url' content="https://mbasiuk.github.io/loancalc.html">
+    <meta property='og:url' content="https://mbasiuk.com/loancalc.html">
     <meta property='og:type' content='website'>
     <meta property='og:description' content="fixed-rate mortgage and fixed-rate loan calculator online">
-    <meta property="og:image" content="https://mbasiuk.github.io/me.png">
+    <meta property="og:image" content="https://mbasiuk.com/me.png">
     <meta property="og:image:width" content="96">
     <meta property="og:image:height" content="96">
     <meta property="og:image:alt" content="MYKHAILO BASIUK avatar">
     <meta itemprop="name" content="Mortgage Calc by MYKHAILO BASIUK">
-    <meta itemprop="url" content="https://mbasiuk.github.io/loancalc.html">
+    <meta itemprop="url" content="https://mbasiuk.com/loancalc.html">
     <meta itemprop="description" content="fixed-rate mortgage and fixed-rate loan calculator online">
     <style>
         body {
