update contact details

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -30,8 +30,12 @@
     <meta itemprop="url" content="https://mbasiuk.com">
     <meta itemprop="description" content="the world&#39;s leading IT expert.">
     <meta name="description" content="the world&#39;s leading IT expert.">
-    <link rel="search" type="application/opensearchdescription+xml" title="Mykhailo Basiuk Search"
-        href="/opensearch.xml">
+    <link rel="search" type="application/opensearchdescription+xml" title="Mykhailo Basiuk Search" href="/opensearch.xml">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="MYKHAILO BASIUK">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link href="contact.vcf" rel="contact">
+
     <style>
         body {
             margin: 0;
