add the actions

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -41,7 +41,6 @@
             margin: 0;
         }
 
-
         .plane {
             position: absolute;
             top: 0;
@@ -134,7 +133,6 @@
             }
         }
 
-
         .card:hover {
             box-shadow: 0 4px 12px rgba(35, 38, 40, 0.2);
         }
@@ -160,7 +158,6 @@
             margin: 6px 0 0 0;
         }
 
-
         .avatar {
             background: url('me.png') no-repeat;
             width: 96px;
@@ -183,6 +180,20 @@
         ::-moz-selection {
             background: #f75b2a;
             color: white;
+        }
+        
+        .actions {
+            margin: 3em 0 0 0;
+        }
+
+        .actions a {
+            display: inline-block;
+            line-height: 1em;
+            border: 1px solid white;
+            padding: 0.5em;
+            background: black;
+            text-decoration: none;
+            margin: 0 0.2em;
         }
 
         @media (prefers-color-scheme: dark) {
@@ -212,7 +223,6 @@
             }
 
             @media (min-width: 500px) {
-
                 a.dval,
                 .dval {
                     color: #999999;
@@ -269,7 +279,8 @@
                 </div>
                 <div>
                     <span class="detail">e:</span>
-                    <a class="dval" href="mailto:mykhailo.basiuk+partner@gmail.com">mykhailo.basiuk+partner@gmail.com</a>
+                    <a class="dval"
+                        href="mailto:mykhailo.basiuk+partner@gmail.com">mykhailo.basiuk+partner@gmail.com</a>
                 </div>
                 <div>
                     <span class="detail">a:</span>
@@ -277,6 +288,12 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="actions">
+            <a href="dm.html">For Business Owners</a>
+            <a href="angels.html">For Angel Investors</a>
+            <a href="/hr">For HRs</a>
         </div>
     </div>
     <script>
