--- a/wwwroot/hr.html
+++ b/wwwroot/hr.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,16 +20,15 @@
             background: black;
             color: #838383;
             font-family: 'Roboto', Tahoma, sans-serif;
+            letter-spacing: 1px;
         }
 
         .actions a {
-            display: inline-block;
+            display: inline-flex;
             line-height: 1em;
-            border: 1px solid white;
-            padding: 0.5em;
             background: black;
             text-decoration: none;
-            margin: 0 0.2em;
+            margin: 0.5em 0;
         }
 
         a {
@@ -36,19 +36,71 @@
             text-decoration: none;
         }
 
+        img {
+            border-radius: .5em;
+            margin: 0 1em 0 0;
+            object-fit: cover;
+            object-position: 0 0;
+        }
+
         a:hover {
-            border: 1px solid #c71e1e;
+            color: #e3e3e3;
         }
 
         .container {
-            margin: 24vh auto;
+            margin: 10vh auto;
             max-width: 500px;
         }
 
         .ins-quote {
             text-align: right;
-            margin: 4em 0;
+            margin: 3em 0;
         }
+
+        .frame {
+            width: 100px;
+            height: 100px;
+        }
+
+        .updated {
+            font-size: small;
+            padding: .5em 0;
+        }
+
+        .flex-vert {
+            display: inline-flex;
+            flex-direction: column;
+        }
+
+        .main {
+            font-weight: bold;
+            font-size: large;
+        }
+
+        #pos:hover {
+            object-position: 0 -130px;
+            transition:2s ease;
+        }
+
+        #res:hover{
+            object-position: 0 -30px;
+            transition:.8s ease;
+        }
+
+        ::selection,
+        ::-moz-selection {
+            background: #f75b2a;
+            color: white;
+        }
+        
+        .detail {
+            color: #F48024;
+        }
+
+        .value {
+            letter-spacing: 1.6px;
+        }
+
     </style>
 </head>
 
@@ -62,11 +114,35 @@
         </div>
 
         <div class="actions">
-            <a href="cv/Mykhailo_Basiuk_CV.pdf">Download CV</a>
-            <a href="resume/resume.html">Check Resume</a>
-            <a href="mailto:mykhailo.basiuk+hr@gmail.com">mykhailo.basiuk+hr@gmail.com</a>
-            <a href="tel:+16514176127">+1(651)417-6127</a>
+            <a href="cv/Mykhailo_Basiuk_CV.pdf">
+                <img src="cv/cv100.png" id="pos" width="100" height="129" />
+                <span class="flex-vert">
+                    <span class="main">CV</span>
+                    <span class="updated">updated Apr 2024</span>
+                </span>
+            </a>
+
+            <br />
+
+            <a href="resume/Mykhailo_Basiuk_Resume.pdf">
+                <img src="resume/resume.png" id="res" width="100" height="129">
+                <span class="flex-vert">
+                    <span class="main">Resume</span>
+                    <span class="updated">updated Apr 2024</span>
+                </span>
+            </a>
+
+            <br />
+
+            <p>
+                <span class="detail">e:</span> <span class="value">mykhailo.basiuk+hr@gmail.com</span>
+            </p>
+
+            <p>
+                <span class="detail">p:</span> <span class="value">+1(651) 417-6127</span>
+            </p>
         </div>
     </div>
 </body>
+
 </html>
