--- a/wwwroot/hr.html
+++ b/wwwroot/hr.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For HR - MYKHAILO BASIUK</title>
+    <title>For HRs - MYKHAILO BASIUK</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="64x64" href="favicon.png">
@@ -15,6 +15,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://mbasiuk.com/hr.html">
+    <link href="contact.vcf" rel="contact">
     <style>
         body {
             background: black;
@@ -133,6 +134,10 @@
             </a>
 
             <br />
+
+            <p>
+                <a href="/contact.vcf">Contact</a>
+            </p>
 
             <p>
                 <span class="detail">e:</span> <span class="value">mykhailo.basiuk+hr@gmail.com</span>
