add tooling with db

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -299,6 +299,7 @@
             <a href="angels.html">For Angel Investors</a>
             -->
             <a href="/hr">For HRs</a>
+            <a href="/login">For Me</a>
         </div>
     </div>
     <script>
