--- a/wwwroot/login.html
+++ b/wwwroot/login.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Login</title>
     <style>
-        body, input {
+        body,
+        input {
             font-family: 'Roboto', Tahoma, sans-serif;
             letter-spacing: 1.3px;
         }
@@ -30,13 +31,20 @@
             box-shadow: 0 7px 11px rgba(60, 65, 70, 0.2);
         }
 
+        .card h2 {
+            padding: 0 0 1em 3em;
+        }
+
+        label {
+            margin: 0 0 1em 0;
+        }
+
         @media (prefers-color-scheme: dark) {
             body {
                 background: black;
             }
 
-            .card 
-            {
+            .card {
                 background: rgb(49, 49, 49);
                 color: rgb(160, 158, 158);
             }
@@ -64,14 +72,29 @@
             border-radius: 10px;
             padding: 0.4em 1.8em;
             letter-spacing: 1.3px;
+            margin: 1em 0 0 0;
         }
 
+        ::selection {
+            background: #f75b2a;
+            color: white;
+        }
+
+        ::-moz-selection {
+            background: #f75b2a;
+            color: white;
+        }
     </style>
 </head>
 
 <body>
 
     <div class="card">
+
+        <h2>
+            <span>My Login:</span>
+        </h2>
+
         <form action="/login" method="post">
             <label>
                 <span>Login:</span>
